# hubris

./: Cargo.toml  README.md
app/pico2/: Cargo.toml  app.toml
app/pico2/src/: main.rs
app/qemu-rv32-virt/: Cargo.toml  app.toml
app/qemu-rv32-virt/src/: main.rs
boards/: pico2.toml  qemu-rv32-virt.toml
chips/qemu-rv32-virt/: chip.toml  memory.toml  openocd.gdb
chips/rp2350/: chip.toml  memory.toml  openocd.gdb
docs/: riscv-port-status.md
drv/ns16550-uart/: Cargo.toml
drv/ns16550-uart/src/: main.rs
sys/kern/: Cargo.toml  build.rs
sys/kern/src/: fail.rs
sys/kern/src/arch/: riscv32.rs
sys/kern/src/arch/riscv32/: irq.rs  mod.rs  timer.rs
sys/userlib/src/: arch.rs  lib.rs
sys/userlib/src/arch/: arm_m.rs  mod.rs  riscv32.rs
task/hello/: Cargo.toml
task/hello/src/: main.rs
task/idle/: Cargo.toml
task/idle/src/: main.rs
task/jefe/: Cargo.toml
task/jefe-stub/: Cargo.toml
task/jefe-stub/src/: main.rs
