[package]
edition = "2021"
name = "pico2"
version = "0.1.0"

[features]

[dependencies]
cfg-if = { workspace = true }
riscv = { version = "0.15", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.16", features = ["single-hart", "memory"] }

kern = { path = "../../sys/kern", default-features = false }

[build-dependencies]
build-util = { path = "../../build/util" }

[[bin]]
name = "pico2"
test = false
doctest = false
bench = false

[lints]
workspace = true
