[package]
edition = "2021"
name = "qemu-rv32-virt"
version = "0.1.0"

[features]
klog-semihosting = ["kern/klog-semihosting", "riscv-semihosting"]

[dependencies]
cfg-if = { workspace = true }
riscv = { version = "0.15", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.16", features = ["single-hart", "memory"] }
riscv-semihosting = { version = "0.2", optional = true }

kern = { path = "../../sys/kern", default-features = false }

[build-dependencies]
build-util = { path = "../../build/util" }

[[bin]]
name = "qemu-rv32-virt"
test = false
doctest = false
bench = false

[lints]
workspace = true
