[package]
name = "drv-ns16550-uart"
version = "0.1.0"
edition = "2021"

[dependencies]
num-derive = { workspace = true }
num-traits = { workspace = true }
zerocopy = { workspace = true }

ns16550a = "0.5"
userlib = { path = "../../sys/userlib" }

[build-dependencies]
build-util = { path = "../../build/util" }

[features]
no-ipc-counters = []

[[bin]]
name = "drv-ns16550-uart"
test = false
doctest = false
bench = false

[lints]
workspace = true
