[package]
name = "task-idle"
version = "0.1.0"
edition = "2021"

[features]
insomniac = []

[dependencies]
# The idle task cannot panic, so we deliberately don't request panic-messages
# to keep the binary tiny.
userlib = { path = "../../sys/userlib" }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { workspace = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.11" }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-idle"
test = false
bench = false

[lints]
workspace = true
